--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Mouse Mousekewitz
-description: This is Mouse Mousekewitz' homepage.
+title: Eetu Taatila
+description: This is Eetu Taatila's homepage.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
